# pyxel-rogue

./: .gitignore  AGENTS.md  BUG_PREVENTION.md  CLAUDE.md  DESIGN.md  DESIGN_ARCHIVE.md  LICENSE  NOTES.md  README.en.md  README.md  TODO.md  announce.html  announce_origin.html  index.html  pyproject.toml  pyxel-rogue.pyxapp  rogue.py  rogue_armor.py  rogue_chase.py  rogue_daemons.py  rogue_dungeon.py  rogue_fight.py  rogue_init.py  rogue_items.py  rogue_lang.py  rogue_layout.py  rogue_map.py  rogue_message_catalogs.py  rogue_misc.py  rogue_monsters.py  rogue_move.py  rogue_pack.py  rogue_palettes.py  rogue_passages.py  rogue_potions.py  rogue_rings.py  rogue_rng.py  rogue_scores.py  rogue_scrolls.py  rogue_search.py  (+7 more)
archive/: pyxel-rogue_ph1.py  pyxel-rogue_ph2.py
assets/: THIRD_PARTY.md
docs/: BUG_PREVENTION.md  DESIGN.md  TODO.md  apps_script_scoreboard.gs  nyandor-promo.html  ui-theme-comparison-obsidian.html  ui-theme-comparison.html
pyxel_rogue/: __init__.py  rogue_armor.py  rogue_bgm.py  rogue_bgm_generator.py  rogue_bgm_sounds.py  rogue_chase.py  rogue_combat_text.py  rogue_daemons.py  rogue_difficulty.py  rogue_dungeon.py  rogue_food.py  rogue_hud.py  rogue_init.py  rogue_input.py  rogue_io.py  rogue_items.py  rogue_lang.py  rogue_layout.py  rogue_levels.py  rogue_map.py  rogue_message_catalogs.py  rogue_message_toast.py  rogue_online_scoreboard.py  rogue_online_state.py  rogue_online_text.py  rogue_palettes.py  rogue_passages.py  rogue_rings.py  rogue_rng.py  rogue_rooms.py  rogue_save.py  rogue_scores.py  rogue_scrolls.py  rogue_sfx.py  rogue_sticks.py  (+8 more)
(+64 files in other folders)
