[project]
name = "pyxel-rogue"
version = "0.0.0"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 160
extend-exclude = [
    "archive",
    "vendor",
    "web",
]

[tool.ruff.lint]
select = [
    "F",
]
ignore = [
]

[tool.ruff.lint.per-file-ignores]
"rogue.py" = ["F401"]
